2011-0?-?? spatosc 0.3.2
------------------------

This release is a developer snapshot in the 0.3 unstable series. 

This version contains new features and bug fixes.

New Features:
    * The old addTranslator methods have been improved, and the odd case for DmitriTranslator has been removed. Instead, there is are several overloaded helper functions in the Scene class (with wrapped method in Wrapper) to help add translators
    * The verbose flag has been removed as a constructor argument for translators, and is replaced with a setVerbose method.

Bug fixes: 
    * connection parameters are forced to be computed and sent when the connection is first established


2011-08-12 spatosc 0.2.2
------------------------

This release is an official version in the 0.2 stable series. 

This version contains new features and bug fixes.

New Features:
    * Added setSynchronous and flushMessages to the wrapper
    * Added hello_world example using wrapper, which works with dmitri, basic renderer, and FUDI.

Bug fixes: 
    * Added Wrapper::addDmitriTranslator with outgoing OSC port number


2011-05-24 spatosc 0.2.0
------------------------

This release is an official version in the 0.2 stable series. 
It's the first release release in the 0.2 stable series. Each release in the 0.2 stable should be backward-compatible with each previous version in the series.

This version contains new features and bug fixes.

New Features:
    * Export the wrapper as DLL for Windows (Visual Studio)
    * Added Wrapper::addDmitriTranslator

Bug fixes: 
    * updated examples for spatosc-0.2
    * fixed examples to use the BasicTranslator
    * updates of osx package stuff in HACKING
    * Makefiles should not be executable
    * fix to SO_VERSION
    * Fixed a memleak in Scene::addTranslator with a *Translator as argument.
    * Removed Wrapper::addTranslator with a *Translator as argument.
    * Added the "using-the-wrapper" example.


2011-05-12 spatosc 0.1.12
-------------------------
